# cuddle

./: .graphqlrc.yml  Cargo.toml  README.md  config.toml
src/: commands.rs  graphql.rs  main.rs
src/auth/: tokens.rs
src/commands/: auth.rs  dashboard.rs
src/commands/dashboard/: dashboard.rs  ui.rs
src/graphql/: graphql.rs  initial_query.rs  queries.graphql  stats.rs
src/graphql/queries/: intitial_query.graphql  schema.graphql  stats.graphql
