[package]
edition = "2018"
name = "cuddle"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.42"
clap = "3.0.0-beta.2"
confy = "0.4.0"
crossterm = "0.20.0"
cynic = "0.14.0"
dialoguer = "0.8.0"
graphql_client = "0.10.0"
reqwest = {version = "0.11.4", features = ["blocking", "json"]}
serde = "1.0.126"
serde_derive = "1.0.126"
tui = {version = "0.15", default-features = false, features = ['crossterm']}
